# Health-Cognitive-Recovery

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  env.txt
config/agents/: data_analyst.yaml  data_quality_auditor.yaml  social_worker.yaml
config/tools/: cypher_expert.yaml  db_schema.yaml  geocoding.yaml  graph_explorer.yaml  weather.yaml
src/: main.rs
src/application/: agent_service.rs  dtos.rs  mod.rs
src/domain/: errors.rs  models.rs  ports.rs
src/infrastructure/: mod.rs  transmutation.rs
src/infrastructure/ai/: rig_client.rs
src/infrastructure/persistence/: agent_repo.rs  mod.rs  neo4j_repo.rs
src/infrastructure/tools/: executor.rs
src/interface/: middleware.rs  mod.rs  transmutation.rs
src/interface/handlers/: admin.rs  agents.rs  chat.rs  export.rs  graph.rs  ingest.rs  mod.rs  reasoning.rs  ui.rs  users.rs
templates/: base.html  config_guide.html  dashboard.html  login.html
templates/components/: navbar.html  styles.html
templates/panels/: graph.html  sidebar.html
templates/scripts/: main.html
templates/tabs/: chat.html  details.html  ingest.html  team.html  tools.html
