[package]
name = "graph-rag-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-core = "0.5.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "auth", "fs", "set-header"] }

# Security & Auth (NUEVOS)
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
tower-governor = "0.5.0" # Rate limiting
governor = "0.8.0"

# Parsing & Utils
tokio-stream = "0.1"
futures = "0.3"
lopdf = "0.34.0"
zip = "2.2.0"
xml-rs = "0.8"
calamine = "0.26.0"
csv = "1.3.0"
html2text = "0.13.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19.0", features = ["derive"] }

# Database & AI
neo4rs = "0.8.0"
rig-core = "0.6.0" 
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Frontend & Utils
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# Documentation
utoipa = { version = "5.3.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
