[package]
name = "graph-rag-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-core = "0.4.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "make"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "auth", "fs", "set-header"] }

# Security & Auth
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-signed", "typed-header"] }
tower_governor = "0.4.2" 
governor = "0.6.3"

# Parsing & Utils
tokio-stream = "0.1"
futures = "0.3"
lopdf = "0.32.0"
zip = "0.6.6"
xml-rs = "0.8"
calamine = "0.24.0"
csv = "1.3.0"
html2text = "0.12.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18.0", features = ["derive"] }

# URL Encoding (Necesario para herramientas HTTP)
url = "2.5" 

# Database & AI
neo4rs = "0.7.1"
rig-core = "0.2.0" 
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Frontend & Utils
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# Documentation
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# Configuration & Files
serde_yaml = "0.9"
glob = "0.3"
async-recursion = "1.0"
base64 = "0.22"
image = "0.25" # Para validación básica de imágenes
mime_guess = "2.0"
